tdf#159254 fix import of printer tray in docx

Change-Id: I9f3835800c921dbc90ef09a8dfa3001bed74d2d8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163589
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>